--- a/custom_components/timer_24h/translations/he.json
+++ b/custom_components/timer_24h/translations/he.json
@@ -3,12 +3,18 @@
     "step": {
       "user": {
         "title": "הוספת טיימר 24 שעות",
-        "description": "הגדרת טיימר 24 שעות",
+        "description": "הגדרת טיימר 24 שעות עם שליטה אוטומטית בישויות",
         "data": {
           "name": "שם הטיימר",
           "entities": "ישויות לשליטה",
-          "home_sensors": "חיישני נוכחות בבית (אופציונלי)",
-          "home_logic": "לוגיקת חיישנים"
+          "home_sensors": "תנאי הפעלה (אופציונלי)",
+          "home_logic": "לוגיקת תנאים"
+        },
+        "data_description": {
+          "name": "תן לטיימר שם תיאורי",
+          "entities": "בחר ישויות שיופעלו אוטומטית על ידי הטיימר",
+          "home_sensors": "בחר חיישנים/ישויות שקובעים מתי הטיימר יפעיל (למשל: נוכחות בבית, מצב שבת, מצב חופשה, טמפרטורה). השאר ריק להפעלה תמיד.",
+          "home_logic": "OR: הטיימר יופעל אם תנאי אחד או יותר מתקיים. AND: הטיימר יופעל רק אם כל התנאים מתקיימים."
         }
       }
     },
@@ -23,12 +29,18 @@
     "step": {
       "init": {
         "title": "הגדרות טיימר 24 שעות",
-        "description": "עדכון הגדרות הטיימר",
+        "description": "עדכון הגדרות והתנהגות הטיימר",
         "data": {
           "name": "שם הטיימר",
           "entities": "ישויות לשליטה",
-          "home_sensors": "חיישני נוכחות בבית (אופציונלי)",
-          "home_logic": "לוגיקת חיישנים"
+          "home_sensors": "תנאי הפעלה (אופציונלי)",
+          "home_logic": "לוגיקת תנאים"
+        },
+        "data_description": {
+          "name": "תן לטיימר שם תיאורי",
+          "entities": "בחר ישויות שיופעלו אוטומטית על ידי הטיימר",
+          "home_sensors": "בחר חיישנים/ישויות שקובעים מתי הטיימר יפעיל (למשל: נוכחות בבית, מצב שבת, מצב חופשה, טמפרטורה). השאר ריק להפעלה תמיד.",
+          "home_logic": "OR: הטיימר יופעל אם תנאי אחד או יותר מתקיים. AND: הטיימר יופעל רק אם כל התנאים מתקיימים."
         }
       }
     }
@@ -62,7 +74,7 @@
         },
         "slots": {
           "name": "משבצות",
-          "description": "רשימת משבצות להגדרה"
+          "description": "רשימת משבצות להגדרה עם מאפייני שעה, דקה ומצב פעיל"
         }
       }
     },
@@ -78,4 +90,3 @@
     }
   }
 }
-
